[package]
name = "mkvpeel"
version = "0.0.1"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.45"
clap = { version = "4.6.0", features = ["derive"] }
clap-duration = "0.1.11"
duration-human = "0.1.10"
thiserror = "2.0.18"
matroska-demuxer = "0.7.0"